# IndustryGrow

./: .dockerignore  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MOTIVATION.md  README.md  REGISTRY.md  REUSE.toml  SECURITY.md
.github/workflows/: dco.yml  erp.yml  registry.yml  reuse.yml
ADR/: ADR-0000-decision-records-and-source-of-truth.md  ADR-0001-industrygrow-framing.md  ADR-0002-field-bus-architecture-rev3.md  ADR-0003-strawberry-day-neutral-profile.md  ADR-0004-gateway-host-hardening-rev1.md  ADR-0005-dsdl-foundation.md  ADR-0007-pki-and-secure-element-identity.md  ADR-0014-sensor-node-taxonomy.md  ADR-0015-gateway-profile-and-control-loops.md  ADR-0016-empirical-survey-and-state-space-modeling.md  ADR-0017-component-document-and-instance-identification-rev1.md  ADR-0017-component-document-and-instance-identification.md  ADR-0018-power-distribution-and-rail-monitoring.md  ADR-0019-purchased-part-(SP)-identification.md  ADR-0020-gateway-persistence-model.md  ADR-0021-instance-and-integration-erp.md  ADR-0022-instance-integration-erp-api.md  ADR-0023-machine-readable-type-registry.md  ADR-0024-operator-ca-bootstrap-and-key-ceremony.md  GLOSSARY.md
carrier/: carrier.kicad_pcb  carrier.kicad_prl  carrier.kicad_pro  carrier.kicad_sch
carrier/production/: carrier-B_Paste.gbp  carrier-Board Layer Stack Bottom Overlay.gbo  carrier-Board Layer Stack Bottom Solder.gbs  carrier-Edge_Cuts.gm1  carrier-F_Paste.gtp  carrier-NPTH.drl  carrier-Top Overlay.gto
erp/: .dockerignore  .env.example  .env.op.tpl  .gitignore  Dockerfile  README.md  docker-compose.mtls.yml  docker-compose.yml  pyproject.toml
erp/app/: __init__.py  config.py  console.py  db.py  main.py  seed.py  store_sync.py
erp/app/api/: __init__.py  deps.py  routes.py  schemas.py
erp/app/models/: __init__.py  domain.py  foundation.py  identifiers.py
erp/app/services/: __init__.py  docs.py  integration.py  mtls.py  profiles.py  registry.py  serials.py  warehouse.py
erp/app/web/: __init__.py  catalog.py  routes.py
erp/app/web/static/: app.css
erp/app/web/templates/: _allocate_result.html  _tree.svg.html  base.html  calibration.html  instances.html  overview.html  stock.html
erp/deploy/mtls/: README.md  make-test-ca.sh  nginx.conf
erp/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
erp/frontend/src/: api.ts  main.ts  styles.css
erp/tests/: __init__.py  conftest.py  test_api.py  test_console.py  test_identifiers.py  test_integration.py  test_mtls.py  test_mtls_certs.py  test_operator_ca.py  test_registry.py  test_serials.py  test_store_sync.py  test_warehouse_live.py
firmware/: CMakeLists.txt  README.md
firmware/cmake/: arm-none-eabi.cmake  dsdl.cmake
firmware/common/bsp/: board.c  board.h
firmware/common/carrier/: atecc608.c  atecc608.h  e0001.c  e0001.h
firmware/common/cyphal/: cyphal.c  cyphal.h  registers.c
firmware/common/drivers/: can.c  can.h  i2c.c  i2c.h  uart.c  uart.h
firmware/common/platform/: clock.c  clock.h
firmware/dsdl/industryflow/greenhouse/safety/: DoorStatus.1.0.dsdl  EnergyWh.1.0.dsdl  LeakStatus.1.0.dsdl
firmware/ldscripts/: STM32F405RGTx_FLASH.ld
firmware/nodes/m05_safety/: main.c  module_id.h  sensors.c  sensors.h
firmware/nodes/m05_safety/drivers/: ina226.c  ina226.h  leak.c  leak.h  s0.c  s0.h  tmp117.c  tmp117.h
firmware/src/: main.c
firmware/src/cyphal/: cyphal.c  cyphal.h  registers.h
firmware/src/drivers/: can.c  can.h
firmware/src/platform/: clock.c  clock.h
firmware/tools/: bootstrap.sh  release.sh
gateway/: .gitattributes  deploy.ps1  gateway.env.example  provision.sh  requirements.txt
gateway/files/app/: can-up.sh  gateway_selftest.py
gateway/files/apt/: 52-industrygrow-unattended-upgrades
gateway/files/fail2ban/: jail.local
gateway/files/journald/: 99-industrygrow.conf
gateway/files/nftables/: industrygrow-gateway.nft
gateway/files/sshd/: 00-industrygrow-hardening.conf
gateway/files/systemd/: gateway-pycyphal.service  industrygrow-can.service
pki/: README.md  _lib.sh  bootstrap-root.sh  issue-intermediate.sh  openssl.cnf  sign-csr.sh
profiles/: strawberry-day-neutral-v1.json
project/: RESEARCH.md  ROADMAP.md
project/figures/: gen_roadmap.py
store/: .gitattributes  E0001-000001-D-Bottom_Layer.gbl  E0001-000001-D-PTH.drl  E0001-000001-D-Top_Layer.gtl  E0001-000001-D-Top_Solder.gts  E0001-000001-D-pinmap.md  E0001-000001-D-pos.csv  E0001-000001-L.csv  E0001-000001.kicad_pcb  E0001-000001.kicad_prl  E0001-000001.kicad_pro  E0001-000001.kicad_sch  E0001-000002-D-B_Paste.gbp  E0001-000002-D-Bottom_Layer.gbl  E0001-000002-D-Bottom_Overlay.gbo  E0001-000002-D-Bottom_Solder.gbs  E0001-000002-D-Edge_Cuts.gm1  E0001-000002-D-F_Paste.gtp  E0001-000002-D-NPTH.drl  E0001-000002-D-PTH.drl  E0001-000002-D-Top_Layer.gtl  E0001-000002-D-Top_Overlay.gto  E0001-000002-D-Top_Solder.gts  E0001-000002-D-pos.csv  E0001-000002-L.csv  E0001-000002.kicad_pcb  E0001-000002.kicad_prl  E0001-000002.kicad_pro  E0001-000002.kicad_sch  E0002-000001.kicad_pcb  E0002-000001.kicad_prl  E0002-000001.kicad_pro  E0002-000001.kicad_sch  E0006-000001-D-pos.csv  E0006-000001-F.hex  E0006-000001-L.csv  E0006-000001.kicad_pcb  E0006-000001.kicad_prl  E0006-000001.kicad_pro  E0006-000001.kicad_sch  (+4 more)
store/industrygrow.pretty/: Carrier_E0001_mechanical.kicad_mod
store/industrygrow.pretty/weact.pretty/: weact.kicad_mod
