# SPDX-FileCopyrightText: 2026 The IndustryGrow contributors
# SPDX-License-Identifier: AGPL-3.0-or-later
[project]
name = "industrygrow-erp"
version = "0.1.0"
description = "IndustryGrow instance & integration ERP — the pre-cloud system of record (ADR-0021)."
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "The IndustryGrow contributors" }]
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "motor>=3.4",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "mongomock-motor>=0.0.29",
  "httpx>=0.27",
]

[project.scripts]
industrygrow-erp = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# ruff — linter + formatter (single tool for both)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "ASYNC", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are idiomatic in argument defaults (not B008 bugs).
extend-immutable-calls = [
  "fastapi.Depends", "fastapi.Query", "fastapi.Header", "fastapi.Path",
  "fastapi.File", "fastapi.Form", "fastapi.Body", "fastapi.Cookie",
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
